module8-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver
spec:
  type: NodePort
  selector:
    app: httpserver
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpserver
  name: httpsvc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: httpserver
  type: Cluster IP
